# python-quality-stack

./: .gitignore  README.md  hatch_build.py  pyproject.toml
.github/workflows/: build-codeql-wheels.yml
scripts/: vendor_codeql.py
src/python_quality_stack/: __init__.py  cli.py  codeql.py  config.py  guards.py  runner.py  version_check.py  vertical_spacing.py
src/vertical_spacing/: __init__.py  cli.py
tests/: test_codeql.py  test_guards.py  test_version_check.py  test_vertical_spacing.py
