[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-quality-stack"
version = "0.2.0"
description = "Opinionated Python quality stack orchestrator."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "gu1p" },
]
dependencies = [
    "complexipy>=5.5.0",
    "mypy>=1.18.0",
    "pyright>=1.1.400",
    "pytest>=8.2.0",
    "ruff>=0.13.0",
    "ty>=0.0.1a21",
    "vulture>=2.14",
]

[project.optional-dependencies]
dev = [
]

[project.scripts]
python-quality = "python_quality_stack.cli:main"
vertical-spacing = "python_quality_stack.vertical_spacing:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/python_quality_stack",
    "src/vertical_spacing",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.complexipy]
paths = ["src/python_quality_stack", "src/vertical_spacing", "tests"]
max-complexity-allowed = 5
check-script = false

[tool.pyright]
include = ["src/python_quality_stack", "src/vertical_spacing"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/python_quality_stack", "src/vertical_spacing"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = ["src/python_quality_stack", "src/vertical_spacing"]
